добавляем описание css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- ниже шрифты -->
 
     <!-- ниже стили  -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -30,7 +30,7 @@
       <!-- hero -->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <button class="button primary" type="button">Заказать услугу</button>
       </section>
 
       <!-- 01 features -->
